# THT_ema

./: .gitignore  README.md  create_dataset.py  pyproject.toml  test.ipynb
app/: dashboard.py  data_ingestion.py  document_extraction.py  document_processor.py  main.py  main_spark.py  ml_models.py  ml_processing.py  reconsilation.py
assets/: THP - Senior AI Application Engineer.docx
