[project]
name = "packages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=37.1.0",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
